# backend

./: .env.example  .gitignore  README.md  STRUCTS.md  certs.py  database.py  pyproject.toml  run.sh  server.py  util.py
.github/workflows/: lint.yml
scripts/: debug_add_task.py  tui.py
testing_scripts/: register_task_api.py
